2008-04-24  Stefan Kost  <ensonic@users.sf.net>

	patch by: Jason Zhao <e3423c@motorola.com>

	* docs/gst/running.xml:
	* gst/gst.c:
	  Enable/disable scan_and_update_registry() based on commandline switch
	  or environment variable. Fixes #520468.
	  
	* ChangeLog:
	  Fix typo in my previous commit.

2008-04-24  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstregistrybinary.c:
	  Add a warning if we hit unhandled factories when saving.
	  More debug logging detail, but move to LOG category.

2008-04-24  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstregistry.c:
	  Tell the *truth* when improving the documentation.

2008-04-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstelementfactory.c: (gst_element_factory_make):
	Unref the factory after it was used the last time, not before.

	* gst/gstindexfactory.c: (gst_index_factory_make):
	Improve debugging a bit and don't leak a ref to the index factory with
	each call.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstregistry.c:
	  Improve the documentation.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstsegment.c:
	  The glib macro seems to be borked. Use g_slice_copy directly and cast
	  in the hope that this fixes the warning on 64bit.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstsegment.c:
	  Document the new function. Use g_slice_dup() (no need for
	  gst_segment_init()).	  

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer-sections.txt:
	  Move GParamSepc macros to standart section.
  
	* gst/gstbin.c:
	  Dn't document _get_type - its in private section in docs anyway and
	  this doc-blob was incomplete.

	* gst/gstclock.h:
	  Fix wrong symbol names in docs.

	* gst/gstmacros.h:
	  Add once doc sentence.

	* tests/check/gst/.cvsignore:
	  Ignore more.

2008-04-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/Makefile.am:
	  And remove those libs here.

2008-04-21  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/libs/Makefile.am: