@@ -1,3 +1,12 @@
+2008-04-25  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* libs/gst/base/gstbasesink.c: (gst_base_sink_query_latency),
+	(gst_base_sink_send_event):
+	Rearrange the latency query code. We always want to do the upstream
+	query, even if we are not live so that the upstream elements can get the
+	latency results too. If we fail doing the query and we are live, we
+	return TRUE afterwards.
+
 2008-04-24  Stefan Kost  <ensonic@users.sf.net>
 
 	patch by: Jason Zhao <e3423c@motorola.com>
